# stonerhand-soundlinks-bot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.ru.md  LICENSE  Procfile  README.md  README.ru.md  pyproject.toml  railway.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: health.py  set_webhook.py  telegram.py  webapp.py
skills/stonerhand-bot-audit/: SKILL.md
skills/stonerhand-bot-deploy/: SKILL.md
skills/stonerhand-bot-editorial-ui/: SKILL.md
src/music_links_bot/: __init__.py  __main__.py  alerts.py  artist.py  bot.py  bot_crate.py  bot_inline.py  bot_lookup.py  bot_runtime.py  bot_stats.py  bot_ui.py  branding.py  cache.py  config.py  constants.py  ephemeral.py  formatter.py  i18n.py  keyboards.py  kvstore.py  loop_runner.py  models.py  nts.py  phrases.py  playlist.py  publication_state.py  publish_queue.py  request_guard.py  search.py  sharing.py  songlink.py  soundcloud.py  stats.py  studio_models.py  studio_presenters.py  studio_storage.py  telegram_text.py  text_utils.py  url_utils.py  webapp_auth.py  (+2 more)
src/music_links_telegram_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_bot.py  test_bot_runtime.py  test_branding.py  test_cache.py  test_config.py  test_ephemeral.py  test_formatter.py  test_health.py  test_loop_runner.py  test_nts.py  test_phrases.py  test_publish_queue.py  test_request_guard.py  test_search.py  test_sharing.py  test_songlink.py  test_soundcloud.py  test_stats.py  test_telegram_dedup.py  test_telegram_text.py  test_url_utils.py  test_webapp.py  test_webapp_assets.py
tests/e2e/: smoke.py
webapp/: api-client.js  app.js  cloud-storage.js  index.html  studio-8.css  studio-core.js  studio-shell.css  styles.css
