[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stonerhand-soundlinks-bot"
version = "0.1.0"
description = "Telegram music-post studio with universal links, collections, inline search, scheduling and a mobile Mini App."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-telegram-bot>=21.0,<22.0",
  "httpx>=0.27.0,<0.28.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "Pillow>=10.4.0,<11.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pyflakes>=3.2.0,<4.0.0",
  "playwright>=1.50.0,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
